--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ Jinja2==3.1.2
 joblib==1.2.0
 jsonschema==4.17.3
 kiwisolver==1.4.4
-lightgbm @ file:///Users/runner/miniforge3/conda-bld/lightgbm_1689341363561/work
+lightgbm==4.0.0
 llvmlite==0.40.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
